--- a/PracticalTest01Var06/app/src/main/AndroidManifest.xml
+++ b/PracticalTest01Var06/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".PracticalTest01Var06SecondaryActivity">
+            <intent-filter>
+                <action android:name="ro.pub.cs.systems.eim.intent.action.PracticalTest01Var06SecondaryActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
